# Tofy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TRAINING_TIPS.md
docs/: ARCHITECTURE.md  DATA_FORMATS.md  DEBUG_AND_LOGGING.md  DECODER_RUNTIME.md  DEVELOPMENT.md  MODEL_BASICS.md  OPENCODE.md  PROJECT_OVERVIEW.md  README.md  RUNBOOK.md  SETUP_AND_RUN.md  TRAINING_AND_DATA.md
scripts/: convert_jsonl_context_response_to_tsv.py  prepare_casual_conversation.py  prepare_cornell.py  prepare_expert_pairs.py  prepare_ultrachat_200k.py  train_encoder_25k.sh  train_full_pipeline.sh
src/: format.rs  main.rs
src/chatbot/: chatbot.rs  generation.rs  mod.rs
src/config/: config.rs
src/data/: data.rs  hub.rs  mod.rs
src/model/: attention.rs  decoder.rs  decoder_bridge.rs  decoder_runtime.rs  encoder.rs  mod.rs  predictor.rs  vocab.rs  world_transition.rs
src/model/encoders/: mod.rs  online_encoder.rs  shared.rs  teacher_encoder.rs
src/tasks/: mod.rs  serve.rs  world.rs
