[package]
name = "jepa_ai"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = "1"
rand = "0.8"
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-datasets = "0.9"
hf-hub = "0.4"
parquet = "57"
